cambios en la configuración del VS Code

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "program": "${workspaceFolder}/obj/${fileBasenameNoExtension}.exe",
             "args": [],
             "stopAtEntry": false,
-            "cwd": "C:/msys64/mingw64/bin",
+            "cwd": "${fileDirname}", //"C:/msys64/mingw64/bin",
             "environment": [],
             "externalConsole": false,
             "MIMode": "gdb",
